# FaceRecognizeESP

./: CHANGELOG.md  CMakeLists.txt  README.md  RELEASE.md  library.properties
.github/workflows/: ci.yml
adapters/: StorageAdapter.cpp  StorageAdapter.h
examples/arduino/recognize_example/: recognize_example.ino
examples/espidf/: CMakeLists.txt
examples/espidf/main/: CMakeLists.txt  main.cpp
include/: FaceRecognizeESP.h  ImageFrame.h  pca_params.h  version.h
scripts/: check_env.py  check_env.sh
src/: FaceDatabase.cpp  FaceDatabase.h  FaceRecognizeESP.cpp  FaceRecognizeESP.h  FeatureExtractor.cpp  FeatureExtractor.h  ImageUtils.cpp  ImageUtils.h  Logger.cpp  Logger.h  RecognitionEngine.cpp  RecognitionEngine.h  Utils.cpp  Utils.h
tests/: test_common.h
tests/integration/: test_enroll_recognize_cycle.cpp
tests/unit/: test_db_io.cpp  test_lbp.cpp  test_pca_projection.cpp
tools/: compute_pca.py  test_pca.py
